Add result area for age calculations
Added a result area to display dog and human age calculations.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
     </div>
 
   </form>
+  
+  <div class="result-area">
+    <p>🐶 狗狗實際年齡：<span id="dog-age">尚未計算</span> 歲</p>
+    <p>👩‍🏫 換算成人類年齡：約 <span id="human-age">尚未計算</span> 歲</p>
+  </div>
 
 </div>
 
