--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="dog-app">
 
   <div class="header">
-    <img src="/workspaces/VC-Day12-DogAgeCalculator/DogAge.png" alt="狗狗插畫" class="logo">
+    <img src="DogAge.png" alt="狗狗插畫" class="logo">
     <h1>狗狗年齡計算機</h1>
     <p class="sub">基於 AAHA 科學標準</p>
   </div>
