Remove comment about icon link tags
Removed comment explaining icon link tags.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <link rel="apple-touch-icon" href="./icon.png">
 <link rel="apple-touch-icon" sizes="180x180" href="./icon.png">
 <!--  放入這三行結束 -->
-    
+<!-- 效果說明：
+• rel="icon"：一般瀏覽器的頁籤小 icon（favicon）、Android Chrome 也會用
+• apple-touch-icon：讓 iOS / iPadOS 在「加入主畫面」時，知道要用哪張圖
+• sizes="180x180"：告訴裝置這張圖的尺寸（給某些裝置參考用） -->
 
 
   <meta charset="UTF-8">
