--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
     
 <!--  放入這三行開始 -->
-<link rel="icon" type="image/png" href="./icon.png">
-<link rel="apple-touch-icon" href="./icon.png">
-<link rel="apple-touch-icon" sizes="180x180" href="./icon.png">
+<link rel="icon" type="image/png" href="DogAge.png">
+<link rel="apple-touch-icon" href="DogAge.png">
+<link rel="apple-touch-icon" sizes="180x180" href="DogAge.png">
 <!--  放入這三行結束 -->
 <!-- 效果說明：
 • rel="icon"：一般瀏覽器的頁籤小 icon（favicon）、Android Chrome 也會用
