--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-
-    
+<!--  PWA -->
+<link rel="manifest" href="manifest.json">
 <!--  放入這三行開始 -->
 <link rel="icon" type="image/png" href="DogAge.png">
 <link rel="apple-touch-icon" href="DogAge.png">
