--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
 </div>
 
 </div>
-
 </body>
+  <script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("sw.js");
+  }
+</script>
 </html>
